Fix: bug at the brkpoint 768px of wrong margin top

--- a/assets/css/style.css
+++ b/assets/css/style.css
@@ -137,7 +137,7 @@ Edited for my own purpose */
 .btn-outline-success {
     font-weight: bold;
     color: #fff;
-    border-color: #fff;
+    border: 2px solid #fff;
     background: #00b906;
 }
 
@@ -178,9 +178,9 @@ Edited for my own purpose */
     padding-top: 30px;
 }
 
-@media only screen and (max-width: 768px) {
+@media only screen and (max-width: 767px) {
     .tech-feat-container {
-        margin-top: 55px;
+        margin-top: 45px;
         padding-top: 0;
     }
 }
@@ -219,8 +219,8 @@ Edited for my own purpose */
 
 @media only screen and (max-width: 576px) {
     .card-title-h3 {
-    font-weight: 600;
-    font-size: 20px;
+    font-weight: 700;
+    font-size: 22px;
     margin-bottom: 20px;
     }
 }
@@ -267,8 +267,14 @@ Edited for my own purpose */
 .tech-highlights p {
     padding-bottom: 0.5rem;
     font-family: 'Lato', sans-serif;
-    font-weight: 500;
+    font-weight: 400;
     font-size: medium;
+}
+
+@media only screen and (max-width: 768px) {
+    .tech-highlights p {
+        font-size: 18px;
+    }
 }
 
 @media only screen and (max-width: 576px) {
@@ -281,6 +287,12 @@ Edited for my own purpose */
     font-size: 30px;
     margin-top: 2px;
     padding: 2px;
+}
+
+@media only screen and (max-width: 768px) {
+    .tech-highlights p i {
+    font-size: 25px;
+    }
 }
 
 @media only screen and (max-width: 576px) {
@@ -322,6 +334,13 @@ Edited for my own purpose */
     }
 }
 
+@media only screen and (max-width: 576px) {
+    .overlay-title-h2-yellow {
+        font-weight: 700;
+        font-size: 20px;
+    }
+}
+
 .text-box-yellow {
     position: relative;
     overflow: hidden;
@@ -345,7 +364,8 @@ Edited for my own purpose */
 }
 
 .gamepass-feat-list li {
-   font-weight: 400;
+   font-weight: 500;
+   font-size: 15px;
    padding-bottom: 0.5rem;
 }
 
